final fixings into the navbar styles in dark mode

--- a/client/src/assets/scss/base/_variables.scss
+++ b/client/src/assets/scss/base/_variables.scss
@@ -3,6 +3,7 @@ $blue: #2196f3;
 $dark-blue: #255fb9;
 $white-partial: #fafafa;
 $white-profile: #f1f1f1;
+$white-hsl: hsla(0,0%,100%,.7);
 
 $light-charcoal: #424242;
 $dark-charcoal: #303030;
